--- a/styles/index.css
+++ b/styles/index.css
@@ -169,13 +169,16 @@ nav {
 
 .news-card p {
     font-size: 17px;
-    margin-bottom: 10px;
+    margin: 0px 25px 10px 25px;
     color: var(--text-gray);
 }
 
 .news-card img {
-    max-width: 300px;
-    object-fit: contain;
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 
 #awards {
